<resources>
    <string name="app_name">Hokangs</string>
    <string name="desc_background_image">background-image</string>
    <string name="txt_authorization">Authorization</string>
    <string name="txt_passport_description">여권을\n스캔 해주세요.</string>
    <string name="txt_btn_checkin">인증하고 바로 체크인 하기</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="txt_nfc_room_key">NFC ROOM KEY</string>
    <string name="txt_desc_room_key">The Ritz-Carlton New York의\n 체크인이 완료되었습니다.</string>
    <string name="txt_room_num">Room Num.3002</string>
    <string name="txt_door_mode">Door mode</string>
    <string name="welcome_to_payment">어서오세요 김벽돌님\n바로 체크인을 도와드릴게요</string>
    <string name="hotel_name">The Ritz-Carlton New York</string>
    <string name="room_type">Room Type</string>
    <string name="room_type_detail">Ocean View\nSweet Room 3002</string>
    <string name="deposit">Deposit</string>
    <string name="deposit_detail">400$\n200,000NDT</string>
    <string name="txt_btn_payment">결제하고 바로 체크인 하기</string>
    <string name="welcome">안녕하세요,\n김벽돌님.</string>
    <string name="hotel_name_2_line">The Ritz Carlton\nNew York</string>
    <string name="txt_btn_checkout">카드키 반납하기</string>
    <string name="amount"><u>654,000</u></string>
    <string name="amount_after_checkout"><u>554,000</u></string>
    <string name="receipt_detail">Room Service\t\t\t-9,400 NDC\n\nMini Bar\t\t\t-600 NDC\n\nNonda\'s Drink\t\t\t-0 NDC</string>
</resources>
