<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NFCKeyActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background"
        android:contentDescription="@string/desc_background_image" />

    <View
        android:id="@+id/view_upper_bar_bg"
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:visibility="visible"
        android:background="#a2d0bd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_upper_bar"
        android:layout_width="40dp"
        android:layout_height="5dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:visibility="visible"
        android:background="#ffff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewAuthorization"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/notosans_thin"
        android:textColor="@android:color/white"
        android:text="@string/txt_authorization"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@id/view_upper_bar" />


    <TextView
        android:id="@+id/textViewPassport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/notosans_thin"
        android:text="@string/txt_desc_room_key"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@id/textViewAuthorization" />

    <View
        android:id="@+id/view_photo_bg"
        android:layout_width="200dp"
        android:layout_height="270dp"
        android:layout_marginTop="20dp"
        android:visibility="visible"
        android:background="@drawable/round_bg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_face"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="@id/view_photo_bg"
        app:layout_constraintEnd_toEndOf="@id/view_photo_bg"
        app:layout_constraintStart_toStartOf="@id/view_photo_bg"
        app:layout_constraintTop_toTopOf="@id/view_photo_bg"
        app:srcCompat="@drawable/ic_key_card_svg"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="80dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="50dp"
        android:text="@string/txt_room_num"
        android:fontFamily="@font/notosanskr_thin"
        android:textSize="30sp"
        android:onClick="actionOpenDoor"

        />



</android.support.constraint.ConstraintLayout>